k8s/6.eks-alb/kubernetes/2.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: staging
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: test
    alb.ingress.kubernetes.io/group.order: "2"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /staging
            pathType: Exact
            backend:
              service:
                name: echoserver
                port:
                  number: 80
