k8s/6.eks-alb/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    # only 1 ALB even multi ingress resources
    alb.ingress.kubernetes.io/group.name: test
    alb.ingress.kubernetes.io/group.order: "1"
    # config your domain here
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:424432388155:certificate/f35a46b0-4442-4b86-9770-7f5b24b16833
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: echoserver
                port:
                  number: 80
